# ArchiveProcessingAndRegex

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg.json
Archives/: OuterFolder.rar
main/: main.cpp
